--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@
 width: 1158px;  
 padding: 0 15px;
 margin: 0 auto;
-/* outline: 2px solid red; */
 }
 
 :root {
@@ -66,9 +65,72 @@ img {
 }
 .header-list {
   display: flex;
-   gap: 40px; 
-   
+   gap: 40px;  
   }
+
+ /* contacts studio portfolio*/
+.header-link {
+  font-style: normal;
+  font-weight: 500;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2E2F42;
+  display: block;
+ position: relative;
+  }
+ .current {
+  color: #404BBF;
+ }
+   /* current */
+  .header-link:after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 4px;  
+    /* opacity: 0; */
+    transform:scalex(0);
+    background-color: #404BBF;
+    transition: transform 250ms;
+/* transition-timing-function: 
+cubic-bezier(0.4, 0, 0.2, 1); */
+  }
+  .header-link:hover,
+  .header-link:focus {
+    color:#404bbf;
+  } 
+  .header-link:hover:after,
+  .header-link:focus:after,
+  .header-link.current:after {
+    /* opacity: 1; */
+  transform:scalex(1);
+  }
+ 
+
+  /* e-mail and cell*/
+  .header-address {
+    font-style: normal;
+  }
+  .header-link-address {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  display: block;
+  padding: 24px 0;
+  
+  }
+  .header-link-address:hover,
+  .header-link-address:focus {
+    color: #404bbf;
+  } 
+
 .contacts {
   display: flex;
   gap: 40px;  
@@ -82,7 +144,8 @@ img {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #4D5AE5;  
+    color: #4D5AE5; 
+     padding: 24px 0; 
     }
 .header-logo:hover,
 .header-logo:focus {
@@ -97,40 +160,7 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: var(--logo-color);
 }
-/* contacts studio portfolio*/
-.header-link {
-font-style: normal;
-font-weight: 500;
-padding-top: 24px;
-padding-bottom: 24px;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #2E2F42;
-display: block;
 
-}
-.header-link:hover,
-.header-link:focus {
-  color:#404bbf;
-} 
-/* e-mail and cell*/
-.header-address {
-  font-style: normal;
-}
-.header-link-address {
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-
-}
-.header-link-address:hover,
-.header-link-address:focus {
-  color: #404bbf;
-} 
 
 /*----------------------------------------------------HERO--------------------------------------------------------------*/
 .first-section{
