--- a/css/styles.css
+++ b/css/styles.css
@@ -95,19 +95,20 @@ img {
     /* opacity: 0; */
     transform:scalex(0);
     background-color: #404BBF;
-    transition: transform 250ms;
-/* transition-timing-function: 
-cubic-bezier(0.4, 0, 0.2, 1); */
+    
+
   }
   .header-link:hover,
   .header-link:focus {
     color:#404bbf;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   } 
   .header-link:hover:after,
   .header-link:focus:after,
   .header-link.current:after {
     /* opacity: 1; */
   transform:scalex(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
  
 
@@ -129,6 +130,7 @@ cubic-bezier(0.4, 0, 0.2, 1); */
   .header-link-address:hover,
   .header-link-address:focus {
     color: #404bbf;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   } 
 
 .contacts {
@@ -149,7 +151,8 @@ cubic-bezier(0.4, 0, 0.2, 1); */
     }
 .header-logo:hover,
 .header-logo:focus {
-  color: #404bbf ;
+  color: #404bbf;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 .header-logo-studio {
     font-family: "Raleway", sans-serif;
@@ -239,6 +242,7 @@ flex-direction: column;
   background-color: #404BBF;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
 
@@ -386,21 +390,16 @@ color: #2E2F42;
   display: flex;
   gap: 24px;
 }
-
 .first-img{
   border-radius: 0px 0px 4px 4px; 
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px 
   rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   background-color: #FFFFFF;
   width: 264px;
-/* height: 428px;  */
-/* height: 380px; */
 }
-
 .position-container {
   padding: 32px 16px
 }
-
 .our-team-soc-list{
 display: flex;
 justify-content: center;
@@ -418,18 +417,15 @@ border-radius: 50%;
 display: flex;
 align-items: center;
 justify-content: center; 
-
 }
 .our-team-soc-link:hover, 
 .our-team-soc-link:focus {
   background-color: #404bbf;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .our-team-soc-icon { 
   fill: var(--our-team-cos-icon);
 }
-
-
 .text-position {
   font-weight: 500;
   font-size: 20px;
@@ -438,7 +434,6 @@ justify-content: center;
     color: #2E2F42;
     margin-bottom: 8px;
     text-align: center;
-    /* margin-top: 32px; */
 }
 .name-position {
   font-weight: 400;
@@ -485,12 +480,43 @@ color: #434455;
 .about-images-link{
   width: calc((100% - 48px) / 3);
 }
+.team-list-link-wrapper{
+  display: block;
+  
+}
+.team-list-img-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+.overlay{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  transform: translate(0, 100%);
+  /* transition: transform 250ms linear; */
+  transition: transform 250ms 
+  cubic-bezier(0.4, 0, 0.2, 1);
+  font-size: 14px;
+  color: #FFFFFF;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #4D5AE5;
+}
+.team-list-link-wrapper:hover .overlay,
+.team-list-link-wrapper:focus .overlay {
+ transform: translate(0, 0);
+}
 
 .wrap-container{
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-  }
+}
   /*----------------------button--------------------*/
 .btn-all{
   padding: 12px 24px;
@@ -521,7 +547,9 @@ color: #434455;
 .nine-img-link:hover,
 .nine-img-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
-  0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  0px 1px 1px rgba(46, 47, 66, 0.16), 
+  0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
   /* --------------------------------CUSTOMERS--------------------------------------------- */
 .fifth-header{
@@ -568,6 +596,7 @@ color: #8E8F99;
 .container-link:focus {
   border-color: #404BBF;
   color: #404BBF;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
  /* .container-link:hover, 
  .container-icon:hover {
@@ -647,6 +676,8 @@ gap: 16px;
 }
 .footer-soc-icon {
 fill: var(--svg-footer-color);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 
