--- a/css/styles.css
+++ b/css/styles.css
@@ -496,7 +496,6 @@ color: #434455;
   height: 100%;
   overflow: auto;
   transform: translate(0, 100%);
-  /* transition: transform 250ms linear; */
   transition: transform 250ms 
   cubic-bezier(0.4, 0, 0.2, 1);
   font-size: 14px;
@@ -531,6 +530,7 @@ color: #434455;
   border: 1px solid var(--btn-all);
   /* border: 1px solid #e7e9fc; */
   background-color: var(--btn-background-color);
+  
 }
 .btn-all:hover,
 .btn-all:focus{
@@ -538,14 +538,16 @@ color: #434455;
   border: 1px solid transparent;
   background-color: #404BBF;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
-  0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); ;
+  0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
-.nine-img-link {
+.about-images-link {
   display: block;
  text-decoration: none;
 }
-.nine-img-link:hover,
-.nine-img-link:focus {
+.about-images-link:hover,
+.about-images-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
   0px 1px 1px rgba(46, 47, 66, 0.16), 
   0px 2px 1px rgba(46, 47, 66, 0.08);
