--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,15 @@ margin: 0 auto;
   --svg-footer-color: #f4f4fd;
   --our-team-cos-icon: #f4f4fd;
 }
+/* @keyframes rotator{
+0% {
+  transform rotate:(0);
+  border-radius: 50%;
+}
+  100% {
+ transform translate: (1000deg);
+  }
+} */
 
 body {
     font-family: "Roboto", sans-serif;
@@ -539,8 +548,10 @@ color: #434455;
   background-color: #404BBF;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
   0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
- 
+  /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+ /* transition-duration: 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+ animation-duration: 250ms;
+ animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .about-images-link {
   display: block;
@@ -679,9 +690,54 @@ gap: 16px;
 .footer-soc-icon {
 fill: var(--svg-footer-color);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  top: 0;
+  box-shadow: inset 0px 0px 12px rgba(0, 0, 0, 0.05);
+  border-radius: 8px;
+  transition: opacity 250ms linear, visibility 250ms linear;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms linear;
+width: 408px;
+min-height: 584px;
+background-color: #FCFCFC;
+border-radius: 4px;
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 
+0px 1px 3px rgba(0, 0, 0, 0.12), 
+0px 2px 1px rgba(0, 0, 0, 0.2);
+padding: 24px;
+
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
+}
+.modal-close {
+  widows: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  display: block;
+  margin-left: auto;  
+}
+.is-hidden {
+  visibility: none;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal-close:hover {
+  background-color: #404BBF;
+}
 
  /* .btn-all:last-child, first-child, 
  nth-child(5 or 7) 
