--- a/css/styles.css
+++ b/css/styles.css
@@ -98,9 +98,10 @@ img {
     content: "";
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: -1px;
     width: 100%;
-    height: 4px;  
+    height: 4px; 
+    border-radius: 2px; 
     /* opacity: 0; */
     transform:scalex(0);
     background-color: #404BBF;
@@ -139,7 +140,7 @@ img {
   .header-link-address:hover,
   .header-link-address:focus {
     color: #404bbf;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   } 
 
 .contacts {
@@ -161,7 +162,7 @@ img {
 .header-logo:hover,
 .header-logo:focus {
   color: #404bbf;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 .header-logo-studio {
     font-family: "Raleway", sans-serif;
@@ -700,14 +701,15 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   top: 0;
   box-shadow: inset 0px 0px 12px rgba(0, 0, 0, 0.05);
   border-radius: 8px;
-  transition: opacity 250ms linear, visibility 250ms linear;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  transition: transform 250ms linear;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 width: 408px;
 min-height: 584px;
 background-color: #FCFCFC;
@@ -722,22 +724,40 @@ padding: 24px;
   transform: translate(-50%, -50%) scale(0);
 }
 .modal-close {
-  widows: 24px;
+  position: absolute;
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  width: 24px;
   height: 24px;
+  top: 24px;
+  right: 24px;
+  padding: 0;
+  cursor: pointer;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   display: block;
-  margin-left: auto;  
+  background-color: #e7e9fc;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 .is-hidden {
-  visibility: none;
+  visibility: hidden;
   opacity: 0;
   pointer-events: none;
 }
 
-.modal-close:hover {
+.modal-close:hover,
+.modal-close:focus {
   background-color: #404BBF;
+  border: none;
+  fill: #FFFFFF;
+  
 }
+.backdrop-icon {
+ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 
  /* .btn-all:last-child, first-child, 
  nth-child(5 or 7) 
