--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ margin: 0 auto;
   --btn-all: #e7e9fc;
   --svg-footer-color: #f4f4fd;
   --our-team-cos-icon: #f4f4fd;
+  --overlay-color: #f4f4fd
 }
 /* @keyframes rotator{
 0% {
@@ -496,6 +497,7 @@ color: #434455;
 }
 .team-list-link-wrapper{
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 .team-list-img-wrapper {
@@ -512,12 +514,11 @@ color: #434455;
   transform: translate(0, 100%);
   transition: transform 250ms 
   cubic-bezier(0.4, 0, 0.2, 1);
-  font-size: 14px;
-  color: #FFFFFF;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 40px 32px;
+  color: var(--overlay-color);
   background-color: #4D5AE5;
 }
 .team-list-link-wrapper:hover .overlay,
@@ -544,6 +545,10 @@ color: #434455;
   border: 1px solid var(--btn-all);
   /* border: 1px solid #e7e9fc; */
   background-color: var(--btn-background-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   
 }
 .btn-all:hover,
